[package]
name = "NETXave"
version = "0.0.8"
edition = "2021"
license = "Apache-2.0"
description = "Lightweight crate for working with the network."
include = ["*.rs", "src/", "LICENSE", "Cargo.toml"]
exclude = [".*", ".DS_Store", "debug/", "target/", "Cargo.lock", "**/*.rs.bk", "*.pdb", ".AppleDouble", ".LSOverride",
    "Icon", "._*", ".DocumentRevisions-V100", ".fseventsd", ".Spotlight-V100", ".TemporaryItems", ".Trashes",
    ".VolumeIcon.icns", ".com.apple.timemachine.donotpresent", ".AppleDB", ".AppleDesktop", "Network Trash Folder",
    "Temporary Items", ".apdisk", ".env", ".gitignore", ".git", ".idea"]

[features]
default = []

# Sync or Async
sync = []
async = []

# Client or Server
client = []
server = []

# Protocols
dns = []
ssh = []
ftp = []
http = []
snmp = []
pop3 = []
smtp = []
imap = []
gemini = []
gopher = []
telnet = []
all_protocols = ["dns", "ssh", "ftp", "http", "snmp", "pop3", "smtp", "imap", "gemini", "gopher", "telnet"]

# Encryption
rustls = ["dep:rustls", "dep:webpki-roots"]
native-tls = ["dep:native-tls"]

__all__ = ["default", "sync", "async", "client", "server", "all_protocols", "rustls", "native-tls"]

[dependencies]
rustls = { version = "0.21.0", optional = true }
native-tls = { version = "0.2.11", optional = true }
webpki-roots = { version = "0.23.0", optional = true }
